--- a/Accidents/accidents.ipynb
+++ b/Accidents/accidents.ipynb
@@ -3,154 +3,292 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e434519c-8e4d-4e91-a55a-680e1231c177",
+   "id": "7e799011-1b37-4173-b5a7-8b0585fbe378",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 4, 3])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial data snapshot:\n",
+      "          ID  Severity  Start_Lat   Start_Lng    End_Lat     End_Lng  \\\n",
+      "0  A-2129372         2  38.770702  -90.275398        NaN         NaN   \n",
+      "1  A-1443861         2  44.971004  -93.419037        NaN         NaN   \n",
+      "2  A-4620777         2  45.843022 -121.061216  45.841329 -121.052174   \n",
+      "3  A-2704247         2  35.300686  -80.806839        NaN         NaN   \n",
+      "4  A-4843909         2  34.064580 -117.796451  34.070030 -117.807601   \n",
+      "\n",
+      "   Distance(mi)        Street         City            County  ... Station  \\\n",
+      "0         0.000   Pershall Rd  Saint Louis  St. Louis County  ...   False   \n",
+      "1         0.000       I-394 E      Hopkins          Hennepin  ...   False   \n",
+      "2         0.451   Highway 142   Goldendale         Klickitat  ...   False   \n",
+      "3         0.000      Nevin Rd    Charlotte       Mecklenburg  ...   False   \n",
+      "4         0.741       CA-71 N       Pomona       Los Angeles  ...   False   \n",
+      "\n",
+      "    Stop Traffic_Calming Traffic_Signal Turning_Loop Sunrise_Sunset  \\\n",
+      "0  False           False          False        False            Day   \n",
+      "1  False           False          False        False            Day   \n",
+      "2  False           False          False        False          Night   \n",
+      "3  False           False          False        False          Night   \n",
+      "4  False           False          False        False            Day   \n",
+      "\n",
+      "   Civil_Twilight  Nautical_Twilight  Astronomical_Twilight    Class  \n",
+      "0             Day                Day                    Day  Source2  \n",
+      "1             Day                Day                    Day  Source2  \n",
+      "2           Night              Night                  Night  Source1  \n",
+      "3           Night              Night                    Day  Source2  \n",
+      "4             Day                Day                    Day  Source1  \n",
+      "\n",
+      "[5 rows x 43 columns]\n",
+      "Filled missing values in numeric column 'Severity' with median: 2.0\n",
+      "Filled missing values in numeric column 'Start_Lat' with median: 35.823078\n",
+      "Filled missing values in numeric column 'Start_Lng' with median: -87.66289499999998\n",
+      "Filled missing values in numeric column 'End_Lat' with median: 36.182425177716766\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/9p/37r_bxzx43lbmnmjw0dvtfx00000gn/T/ipykernel_8169/4084529379.py:23: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[col].fillna(median_val, inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filled missing values in numeric column 'End_Lng' with median: -88.0270915\n",
+      "Filled missing values in numeric column 'Distance(mi)' with median: 0.034\n",
+      "Filled missing values in numeric column 'Temperature(F)' with median: 64.0\n",
+      "Filled missing values in numeric column 'Wind_Chill(F)' with median: 62.0\n",
+      "Filled missing values in numeric column 'Humidity(%)' with median: 67.0\n",
+      "Filled missing values in numeric column 'Pressure(in)' with median: 29.86\n",
+      "Filled missing values in numeric column 'Visibility(mi)' with median: 10.0\n",
+      "Filled missing values in numeric column 'Wind_Speed(mph)' with median: 7.0\n",
+      "Filled missing values in numeric column 'Precipitation(in)' with median: 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/9p/37r_bxzx43lbmnmjw0dvtfx00000gn/T/ipykernel_8169/4084529379.py:29: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[col].fillna(\"Unknown\", inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filled missing values in categorical column 'ID' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Street' with 'Unknown'\n",
+      "Filled missing values in categorical column 'City' with 'Unknown'\n",
+      "Filled missing values in categorical column 'County' with 'Unknown'\n",
+      "Filled missing values in categorical column 'State' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Zipcode' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Country' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Timezone' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Airport_Code' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Weather_Timestamp' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Wind_Direction' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Weather_Condition' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Sunrise_Sunset' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Civil_Twilight' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Nautical_Twilight' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Astronomical_Twilight' with 'Unknown'\n",
+      "Filled missing values in categorical column 'Class' with 'Unknown'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/9p/37r_bxzx43lbmnmjw0dvtfx00000gn/T/ipykernel_8169/4084529379.py:34: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df = df.replace({True: 1, False: 0})\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Categorical features for encoding: ['ID', 'Street', 'City', 'County', 'State', 'Zipcode', 'Country', 'Timezone', 'Airport_Code', 'Weather_Timestamp', 'Wind_Direction', 'Weather_Condition', 'Sunrise_Sunset', 'Civil_Twilight', 'Nautical_Twilight', 'Astronomical_Twilight']\n"
+     ]
     }
    ],
    "source": [
-    "#You need to add the 2 other files to use this yourself locally, they are too big to upload to github\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn import preprocessing\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "df = pd.read_csv(\"car_eval_train.csv\")\n",
-    "label_encoder =  preprocessing.LabelEncoder()\n",
+    "# -------------------------\n",
+    "# Data Preprocessing\n",
+    "# -------------------------\n",
+    "# Load the CSV file (adjust the filename as needed)\n",
+    "df = pd.read_csv(\"Classifying_accidents-train.csv\")\n",
     "\n",
-    "buying_mapping = {\n",
-    "    'low': 1,\n",
-    "    'med': 2,\n",
-    "    'high': 3,\n",
-    "    'vhigh': 4\n",
-    "}\n",
+    "# Display the initial data snapshot\n",
+    "print(\"Initial data snapshot:\")\n",
+    "print(df.head())\n",
     "\n",
-    "df['buying'] = df['buying'].map(buying_mapping)\n",
-    "df['buying'].unique()"
+    "# --- Missing Values Handling ---\n",
+    "# Fill missing numeric values with the median\n",
+    "numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "for col in numeric_cols:\n",
+    "    median_val = df[col].median()\n",
+    "    df[col].fillna(median_val, inplace=True)\n",
+    "    print(f\"Filled missing values in numeric column '{col}' with median: {median_val}\")\n",
+    "\n",
+    "# Fill missing categorical (object) values with \"Unknown\"\n",
+    "object_cols = df.select_dtypes(include=['object']).columns\n",
+    "for col in object_cols:\n",
+    "    df[col].fillna(\"Unknown\", inplace=True)\n",
+    "    print(f\"Filled missing values in categorical column '{col}' with 'Unknown'\")\n",
+    "\n",
+    "# --- Boolean Conversion ---\n",
+    "# Convert boolean columns to integers (True -> 1, False -> 0)\n",
+    "df = df.replace({True: 1, False: 0})\n",
+    "\n",
+    "# --- Target Variable Handling ---\n",
+    "# Assume the target column is \"Class\" (which contains the source information, e.g., Source1 or Source2)\n",
+    "if 'Class' in df.columns:\n",
+    "    # Factorize to convert source labels to numeric codes (e.g., Source1 -> 0, Source2 -> 1)\n",
+    "    df['Class'] = pd.factorize(df['Class'])[0]\n",
+    "    target_column = 'Class'\n",
+    "else:\n",
+    "    target_column = None\n",
+    "\n",
+    "# --- Feature Encoding ---\n",
+    "# Separate features from the target column (if it exists)\n",
+    "if target_column:\n",
+    "    features = df.drop(columns=[target_column])\n",
+    "else:\n",
+    "    features = df.copy()\n",
+    "\n",
+    "# Identify categorical features (object type) for one-hot encoding\n",
+    "categorical_features = features.select_dtypes(include=['object']).columns.tolist()\n",
+    "print(\"\\nCategorical features for encoding:\", categorical_features)\n",
+    "\n",
+    "# One-hot encode the categorical features (using drop_first=True to avoid dummy variable trap)\n",
+    "features_encoded = pd.get_dummies(features, columns=categorical_features, drop_first=True)\n",
+    "\n",
+    "# --- Reassemble the DataFrame ---\n",
+    "# If a target exists, add it back and ensure it is the last column\n",
+    "if target_column:\n",
+    "    features_encoded[target_column] = df[target_column]\n",
+    "    cols = [col for col in features_encoded.columns if col != target_column] + [target_column]\n",
+    "    df_processed = features_encoded[cols]\n",
+    "else:\n",
+    "    df_processed = features_encoded\n",
+    "\n",
+    "# Display the processed DataFrame using .head()\n",
+    "print(\"\\nProcessed data preview:\")\n",
+    "print(df_processed.head())\n",
+    "\n",
+    "# -------------------------\n",
+    "# Plotting the Data with matplotlib\n",
+    "# -------------------------\n",
+    "\n",
+    "# 1. Plot the distribution of the target \"Class\" column (if it exists)\n",
+    "if 'Class' in df_processed.columns:\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    # Create bins so that each unique integer class gets its own bin.\n",
+    "    bins = np.arange(df_processed['Class'].min(), df_processed['Class'].max() + 2) - 0.5\n",
+    "    plt.hist(df_processed['Class'], bins=bins, edgecolor='black')\n",
+    "    plt.title('Distribution of Class')\n",
+    "    plt.xlabel('Class')\n",
+    "    plt.ylabel('Count')\n",
+    "    plt.xticks(range(df_processed['Class'].min(), df_processed['Class'].max()+1))\n",
+    "    plt.show()\n",
+    "\n",
+    "# 2. Plot a correlation heatmap of numeric features\n",
+    "plt.figure(figsize=(12, 10))\n",
+    "corr = df_processed.corr()\n",
+    "plt.imshow(corr, cmap='coolwarm', interpolation='none')\n",
+    "plt.colorbar()\n",
+    "plt.xticks(range(len(corr)), corr.columns, rotation=90)\n",
+    "plt.yticks(range(len(corr)), corr.columns)\n",
+    "plt.title(\"Correlation Heatmap\")\n",
+    "plt.show()\n",
+    "\n",
+    "# 3. Plot a scatter plot for Start Latitude vs. Start Longitude (if they exist)\n",
+    "if 'Start_Lat' in df_processed.columns and 'Start_Lng' in df_processed.columns:\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.scatter(df_processed['Start_Lat'], df_processed['Start_Lng'], alpha=0.5)\n",
+    "    plt.title('Scatter plot of Start Latitude vs. Start Longitude')\n",
+    "    plt.xlabel('Start Latitude')\n",
+    "    plt.ylabel('Start Longitude')\n",
+    "    plt.show()\n",
+    "\n",
+    "# -------------------------\n",
+    "# Model Training with Random Forest (optional, not plotted)\n",
+    "# -------------------------\n",
+    "if target_column:\n",
+    "    X = df_processed.drop(columns=[target_column])\n",
+    "    y = df_processed[target_column]\n",
+    "\n",
+    "    # Split data into training (80%) and testing (20%) sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
+    "\n",
+    "    # Initialize and train the Random Forest Classifier\n",
+    "    clf = RandomForestClassifier(random_state=42)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "\n",
+    "    # Make predictions on the test set and calculate accuracy\n",
+    "    y_pred = clf.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    print(\"\\nRandom Forest Classifier Accuracy:\", accuracy)\n",
+    "\n",
+    "# -------------------------\n",
+    "# Model Training with Random Forest\n",
+    "# -------------------------\n",
+    "# Assume the target column is 'Class'\n",
+    "X = df_processed.drop(columns=['Class'])\n",
+    "y = df_processed['Class']\n",
+    "\n",
+    "# Split data into training (80%) and testing (20%) sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
+    "\n",
+    "# Initialize and train the Random Forest Classifier\n",
+    "clf = RandomForestClassifier(random_state=42)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set and calculate accuracy\n",
+    "y_pred = clf.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"\\nRandom Forest Classifier Accuracy:\", accuracy)\n",
+    "\n",
+    "# Optionally, display the first few rows of the processed data once more\n",
+    "print(\"\\nFinal processed data preview:\")\n",
+    "print(df_processed.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "15ad0ceb",
+   "execution_count": null,
+   "id": "6c3ef1e2-02c5-4fc8-8db6-c30a63ffc941",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>buying</th>\n",
-       "      <th>maint</th>\n",
-       "      <th>doors</th>\n",
-       "      <th>persons</th>\n",
-       "      <th>lug_boot</th>\n",
-       "      <th>safety</th>\n",
-       "      <th>class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>med</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>med</td>\n",
-       "      <td>med</td>\n",
-       "      <td>acc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>high</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>small</td>\n",
-       "      <td>med</td>\n",
-       "      <td>unacc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>high</td>\n",
-       "      <td>5more</td>\n",
-       "      <td>more</td>\n",
-       "      <td>small</td>\n",
-       "      <td>med</td>\n",
-       "      <td>acc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>low</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>med</td>\n",
-       "      <td>high</td>\n",
-       "      <td>good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>low</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>small</td>\n",
-       "      <td>high</td>\n",
-       "      <td>unacc</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   buying maint  doors persons lug_boot safety  class\n",
-       "0       2   med      3       4      med    med    acc\n",
-       "1       2  high      3       2    small    med  unacc\n",
-       "2       1  high  5more    more    small    med    acc\n",
-       "3       2   low      2       4      med   high   good\n",
-       "4       4   low      3       2    small   high  unacc"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
