--- a/Accidents/accidents.ipynb
+++ b/Accidents/accidents.ipynb
@@ -125,156 +125,102 @@
       "\n",
       "Categorical features for encoding: ['ID', 'Street', 'City', 'County', 'State', 'Zipcode', 'Country', 'Timezone', 'Airport_Code', 'Weather_Timestamp', 'Wind_Direction', 'Weather_Condition', 'Sunrise_Sunset', 'Civil_Twilight', 'Nautical_Twilight', 'Astronomical_Twilight']\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
     "# -------------------------\n",
-    "# Data Preprocessing\n",
+    "# Data Preprocessing for Binary Classification\n",
     "# -------------------------\n",
-    "# Load the CSV file (adjust the filename as needed)\n",
-    "df = pd.read_csv(\"Classifying_accidents-train.csv\")\n",
     "\n",
-    "# Display the initial data snapshot\n",
-    "print(\"Initial data snapshot:\")\n",
+    "# Define only the essential columns (adjust as needed)\n",
+    "cols_to_keep = [\n",
+    "    \"Severity\", \"Start_Lat\", \"Start_Lng\", \"End_Lat\", \"End_Lng\",\n",
+    "    \"Distance(mi)\", \"Temperature(F)\", \"Wind_Chill(F)\", \"Humidity(%)\",\n",
+    "    \"Pressure(in)\", \"Visibility(mi)\", \"Wind_Speed(mph)\", \"Precipitation(in)\",\n",
+    "    \"Class\"  # Target column for binary classification\n",
+    "]\n",
+    "\n",
+    "# Load the CSV file using only the selected columns\n",
+    "df = pd.read_csv(\"Classifying_accidents-train.csv\", usecols=cols_to_keep)\n",
+    "\n",
+    "# Display an initial snapshot of the data\n",
+    "print(\"Initial Data Snapshot:\")\n",
     "print(df.head())\n",
     "\n",
-    "# --- Missing Values Handling ---\n",
-    "# Fill missing numeric values with the median\n",
-    "numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "# --- Clean Numeric Columns ---\n",
+    "# Convert numeric columns (except the target) to numbers and fill missing values with the median\n",
+    "numeric_cols = [col for col in cols_to_keep if col != \"Class\"]\n",
     "for col in numeric_cols:\n",
+    "    df[col] = pd.to_numeric(df[col], errors='coerce')\n",
     "    median_val = df[col].median()\n",
     "    df[col].fillna(median_val, inplace=True)\n",
-    "    print(f\"Filled missing values in numeric column '{col}' with median: {median_val}\")\n",
+    "    print(f\"Filled missing values in '{col}' with median: {median_val}\")\n",
     "\n",
-    "# Fill missing categorical (object) values with \"Unknown\"\n",
-    "object_cols = df.select_dtypes(include=['object']).columns\n",
-    "for col in object_cols:\n",
-    "    df[col].fillna(\"Unknown\", inplace=True)\n",
-    "    print(f\"Filled missing values in categorical column '{col}' with 'Unknown'\")\n",
-    "\n",
-    "# --- Boolean Conversion ---\n",
-    "# Convert boolean columns to integers (True -> 1, False -> 0)\n",
-    "df = df.replace({True: 1, False: 0})\n",
-    "\n",
-    "# --- Target Variable Handling ---\n",
-    "# Assume the target column is \"Class\" (which contains the source information, e.g., Source1 or Source2)\n",
-    "if 'Class' in df.columns:\n",
-    "    # Factorize to convert source labels to numeric codes (e.g., Source1 -> 0, Source2 -> 1)\n",
-    "    df['Class'] = pd.factorize(df['Class'])[0]\n",
-    "    target_column = 'Class'\n",
+    "# --- Process Target Variable for Binary Classification ---\n",
+    "# For the target \"Class\", map the values to 0 and 1.\n",
+    "# If there are exactly two unique classes, map the first to 0 and the second to 1.\n",
+    "# Otherwise, you can decide which class(es) to mark as 0 or 1.\n",
+    "if df[\"Class\"].dtype == object:\n",
+    "    unique_classes = df[\"Class\"].unique()\n",
+    "    print(\"Unique classes before mapping:\", unique_classes)\n",
+    "    if len(unique_classes) == 2:\n",
+    "        mapping = {unique_classes[0]: 0, unique_classes[1]: 1}\n",
+    "    else:\n",
+    "        # Example: assign the first unique class as 0, and all others as 1.\n",
+    "        mapping = {unique_classes[0]: 0}\n",
+    "        for cls in unique_classes[1:]:\n",
+    "            mapping[cls] = 1\n",
+    "    df[\"Class\"] = df[\"Class\"].map(mapping)\n",
+    "    print(\"Mapping for Class:\", mapping)\n",
     "else:\n",
-    "    target_column = None\n",
+    "    # If already numeric but with more than 2 unique values, threshold by the median:\n",
+    "    if df[\"Class\"].nunique() > 2:\n",
+    "        threshold = df[\"Class\"].median()\n",
+    "        df[\"Class\"] = (df[\"Class\"] > threshold).astype(int)\n",
+    "        print(\"Applied thresholding on numeric target using median.\")\n",
     "\n",
-    "# --- Feature Encoding ---\n",
-    "# Separate features from the target column (if it exists)\n",
-    "if target_column:\n",
-    "    features = df.drop(columns=[target_column])\n",
-    "else:\n",
-    "    features = df.copy()\n",
-    "\n",
-    "# Identify categorical features (object type) for one-hot encoding\n",
-    "categorical_features = features.select_dtypes(include=['object']).columns.tolist()\n",
-    "print(\"\\nCategorical features for encoding:\", categorical_features)\n",
-    "\n",
-    "# One-hot encode the categorical features (using drop_first=True to avoid dummy variable trap)\n",
-    "features_encoded = pd.get_dummies(features, columns=categorical_features, drop_first=True)\n",
-    "\n",
-    "# --- Reassemble the DataFrame ---\n",
-    "# If a target exists, add it back and ensure it is the last column\n",
-    "if target_column:\n",
-    "    features_encoded[target_column] = df[target_column]\n",
-    "    cols = [col for col in features_encoded.columns if col != target_column] + [target_column]\n",
-    "    df_processed = features_encoded[cols]\n",
-    "else:\n",
-    "    df_processed = features_encoded\n",
-    "\n",
-    "# Display the processed DataFrame using .head()\n",
-    "print(\"\\nProcessed data preview:\")\n",
-    "print(df_processed.head())\n",
+    "print(\"\\nProcessed Data Snapshot:\")\n",
+    "print(df.head())\n",
     "\n",
     "# -------------------------\n",
-    "# Plotting the Data with matplotlib\n",
+    "# Model Training (Binary Classification)\n",
     "# -------------------------\n",
     "\n",
-    "# 1. Plot the distribution of the target \"Class\" column (if it exists)\n",
-    "if 'Class' in df_processed.columns:\n",
-    "    plt.figure(figsize=(8, 6))\n",
-    "    # Create bins so that each unique integer class gets its own bin.\n",
-    "    bins = np.arange(df_processed['Class'].min(), df_processed['Class'].max() + 2) - 0.5\n",
-    "    plt.hist(df_processed['Class'], bins=bins, edgecolor='black')\n",
-    "    plt.title('Distribution of Class')\n",
-    "    plt.xlabel('Class')\n",
-    "    plt.ylabel('Count')\n",
-    "    plt.xticks(range(df_processed['Class'].min(), df_processed['Class'].max()+1))\n",
-    "    plt.show()\n",
+    "# Separate features and target\n",
+    "X = df.drop(columns=[\"Class\"])\n",
+    "y = df[\"Class\"]\n",
     "\n",
-    "# 2. Plot a correlation heatmap of numeric features\n",
-    "plt.figure(figsize=(12, 10))\n",
-    "corr = df_processed.corr()\n",
-    "plt.imshow(corr, cmap='coolwarm', interpolation='none')\n",
-    "plt.colorbar()\n",
-    "plt.xticks(range(len(corr)), corr.columns, rotation=90)\n",
-    "plt.yticks(range(len(corr)), corr.columns)\n",
-    "plt.title(\"Correlation Heatmap\")\n",
-    "plt.show()\n",
-    "\n",
-    "# 3. Plot a scatter plot for Start Latitude vs. Start Longitude (if they exist)\n",
-    "if 'Start_Lat' in df_processed.columns and 'Start_Lng' in df_processed.columns:\n",
-    "    plt.figure(figsize=(8, 6))\n",
-    "    plt.scatter(df_processed['Start_Lat'], df_processed['Start_Lng'], alpha=0.5)\n",
-    "    plt.title('Scatter plot of Start Latitude vs. Start Longitude')\n",
-    "    plt.xlabel('Start Latitude')\n",
-    "    plt.ylabel('Start Longitude')\n",
-    "    plt.show()\n",
-    "\n",
-    "# -------------------------\n",
-    "# Model Training with Random Forest (optional, not plotted)\n",
-    "# -------------------------\n",
-    "if target_column:\n",
-    "    X = df_processed.drop(columns=[target_column])\n",
-    "    y = df_processed[target_column]\n",
-    "\n",
-    "    # Split data into training (80%) and testing (20%) sets\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
-    "\n",
-    "    # Initialize and train the Random Forest Classifier\n",
-    "    clf = RandomForestClassifier(random_state=42)\n",
-    "    clf.fit(X_train, y_train)\n",
-    "\n",
-    "    # Make predictions on the test set and calculate accuracy\n",
-    "    y_pred = clf.predict(X_test)\n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    print(\"\\nRandom Forest Classifier Accuracy:\", accuracy)\n",
-    "\n",
-    "# -------------------------\n",
-    "# Model Training with Random Forest\n",
-    "# -------------------------\n",
-    "# Assume the target column is 'Class'\n",
-    "X = df_processed.drop(columns=['Class'])\n",
-    "y = df_processed['Class']\n",
-    "\n",
-    "# Split data into training (80%) and testing (20%) sets\n",
+    "# Split the data into 80% training and 20% testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
     "\n",
     "# Initialize and train the Random Forest Classifier\n",
     "clf = RandomForestClassifier(random_state=42)\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
-    "# Make predictions on the test set and calculate accuracy\n",
+    "# Make predictions on the test set and evaluate\n",
     "y_pred = clf.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"\\nRandom Forest Classifier Accuracy:\", accuracy)\n",
-    "\n",
-    "# Optionally, display the first few rows of the processed data once more\n",
-    "print(\"\\nFinal processed data preview:\")\n",
-    "print(df_processed.head())\n"
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n"
    ]
   },
   {
