--- a/Accidents/accidents.ipynb
+++ b/Accidents/accidents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7e799011-1b37-4173-b5a7-8b0585fbe378",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6c3ef1e2-02c5-4fc8-8db6-c30a63ffc941",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Random Forest Classifier Accuracy: 1.0\n"
+      "Random Forest Classifier Accuracy: 0.8359509422736964\n"
      ]
     }
    ],
