--- a/Accidents/accidents.ipynb
+++ b/Accidents/accidents.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7e799011-1b37-4173-b5a7-8b0585fbe378",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9p/37r_bxzx43lbmnmjw0dvtfx00000gn/T/ipykernel_16697/130081625.py:32: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/9p/37r_bxzx43lbmnmjw0dvtfx00000gn/T/ipykernel_16697/3457694708.py:32: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -94,7 +94,20 @@
       "1              5.0               0.00      0  \n",
       "2              0.0               0.00      1  \n",
       "3              3.5               0.00      0  \n",
-      "4              8.0               0.00      1  \n"
+      "4              8.0               0.00      1  \n",
+      "\n",
+      "Random Forest Classifier Accuracy: 1.0\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00    826924\n",
+      "           1       1.00      1.00      1.00   1080827\n",
+      "\n",
+      "    accuracy                           1.00   1907751\n",
+      "   macro avg       1.00      1.00      1.00   1907751\n",
+      "weighted avg       1.00      1.00      1.00   1907751\n",
+      "\n"
      ]
     }
    ],
@@ -168,7 +181,7 @@
     "y = df[\"Class\"]\n",
     "\n",
     "# Split the data into 80% training and 20% testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.50, random_state=42)\n",
     "\n",
     "# Initialize and train the Random Forest Classifier\n",
     "clf = RandomForestClassifier(random_state=42)\n",
@@ -184,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6c3ef1e2-02c5-4fc8-8db6-c30a63ffc941",
    "metadata": {},
    "outputs": [
