--- a/Car_Eval/main.ipynb
+++ b/Car_Eval/main.ipynb
@@ -580,6 +580,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c40f3fe6",
+   "metadata": {},
+   "source": [
+    "# Exporting as a CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "4095fb18-9248-4533-aca2-12fe2d1b4c72",
